install, setup, configure & test

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -20,3 +20,10 @@ suites:
       - recipe[test-helper]
       - recipe[eulipion-cleanspeak::default]
     attributes:
+      citadel:
+        bucket: 'show-chef'
+        access_key_id: <%= ENV['AWS_KEY'] %>
+        secret_access_key: <%= ENV['AWS_SECRET'] %>
+      cleanspeak:
+        config:
+          license_id: 'farts'
